--- a/Fourier_Transform.ipynb
+++ b/Fourier_Transform.ipynb
@@ -7,13 +7,29 @@
     "Introduction\n",
     "--------------\n",
     "\n",
-    "The Fourier Transform is ubiquitous, gg but it has singular standing in signal processing because of the way sampling imposes a bandwidth-centric view of the world.  The Discrete Fourier Transform (DFT) is the primary analysis tool for exploring this perspective. Our development unconventionally starts with a matrix/vector representation of the DFT because that facilitates our visual approach which in turn is designed to develop intuition about the operation and usage of the DFT in practice.\n",
+    "The Fourier Transform is one of the most powerful and well known tools to analyse frequency behaviour. As such, it allows performing many operations in signal and imaging processing such as filtering, signal evaluation, signal characterization, etc.\n",
     "\n",
-    "Let us start with the following DFT matrix\n",
+    "In particular for medical applications some of the most widespread applications of Fourier Transform in signal processing are:\n",
+    "1. Filtering the signal to extract the information from the noise (i.e. the respiration rate will add important noice to an ECG signal but its frequency is much lower and can then be subtracted)\n",
+    "2. Evaluating the magnitude at specific frequencies of the signal to evaluate thresholds in an acquired signal (i.e. the detection of a seizure onset in EEG is characterized for large broadband signals)\n",
+    "3. The appearance of harmonics within a signal which may indicate there is an abnormality (i.e. the detection of harmonics in an ECG may indicate an arhytmia)\n",
+    "\n",
+    "Fourier transforms present important properties that allow to combine analysis in frequency with simplicity:\n",
+    "1. Linearity: the transform of a sum is the sum of the transforms\n",
+    "2. Symmetry: the transform of the negative frequency is the conjugate of the transform\n",
+    "3. Convolution: the transform of a convolution is the product of each transform\n",
+    "\n",
+    "In addition, filter design using frequency response is an important feature, and analysis of the response of a digital filter is usually done as a function of frequency:\n",
+    "1. It is often necessary to understand the behaviour of your signal before proposing the design of a filter\n",
+    "2. Once a filter is chosen, the impact of the order on the frequency behaviour of the filter and how that may affect the signal is important\n",
+    "\n",
+    "The Discrete Fourier Transform (DFT) is the primary analysis tool for Fourier Transform nowadays since much of the processing is performed on digitized signals. \n",
+    "\n",
+    "This notebook will show how the DFT is implemented using matrix/vector representation of the DFT. Let us start with the following DFT matrix:\n",
     "\n",
     "$$ \\mathbf{U} = \\frac{1}{\\sqrt N} \\left[ \\exp \\left( j \\frac{2\\pi}{N} n k \\right) \\right]_{n\\in\\{0,N_s-1\\},k\\in\\{0,N-1\\}} $$\n",
     "\n",
-    "where $n$ counts rows through the number of samples and $k$ indexes the discrete frequencies as columns. \n",
+    "where $n$ counts rows through the number of samples from a total of N samples and $k$ indexes the discrete frequencies as columns. \n",
     "\n",
     "The following figure shows the discrete frequencies on the unit circle and their corresponding real and imaginary parts that are the columns of $\\mathbf{U}$."
    ]
