--- a/SimpleExample.ipynb
+++ b/SimpleExample.ipynb
@@ -7,7 +7,7 @@
     "Introduction\n",
     "--------------\n",
     "\n",
-    "This Notebook is the simplest example for how to run one single piece of code in Python for the course. If you are interested, one of the possible Mid-Term projects is to create a Notebook for all the examples with complete explanations based on the Tutorial.\n"
+    "This Notebook is the simplest example for how to run one single piece of code in Python for the course. If you are interested, one of the possible Mid-Term projects is to create a Notebook for all the examples with complete explanations on the Tutorial. This will also include making your Notebook public by obtaining (self-learn) your own GitHub repository and hosting the notebook in it. You can then send me the URL to your notebook for grading. Your procedure to obtain GitHub, hosting and updating should be included in the notebook.\n"
    ]
   },
   {
@@ -42,6 +42,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [Root]",
    "language": "python",
