--- a/Filtering.ipynb
+++ b/Filtering.ipynb
@@ -131,7 +131,7 @@
     "ax.set_xlabel(\"n\",fontsize=18)\n",
     "ax.legend(loc=0)\n",
     "ax.set_xticks(n)\n",
-    "ax.set_ylabel(\"amplitudeLC\",fontsize=18);\n",
+    "ax.set_ylabel(\"amplitude\",fontsize=18);\n",
     "\n",
     "# fig.savefig('figure_00@.png', bbox_inches='tight', dpi=300)\n"
    ]
